--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nanoid": "^3.1.28"
+    "nanoid": "^3.1.28",
+    "yup": "^0.32.9"
   }
 }
